Changed so it uses MLL instead of java's LL